--- a/ChipSplit/MainWindow.xaml
+++ b/ChipSplit/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ChipSplit"
         mc:Ignorable="d"
 		xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Untitled" Width="465" Height="270"
+        Title="Empty" Width="465" Height="300"
 		ShowTitleBar="True"
 		Icon="resources/mahapps.metro.logo2.ico"
 		ShowMaxRestoreButton="False"
@@ -41,25 +41,17 @@
     </Controls:MetroWindow.Flyouts>
 
     <Grid>
-        <Button x:Name="buttonStart" Content="Start" Margin="368,209,0,0" Click="buttonStart_Click" x:FieldModifier="public" Height="20" Style="{DynamicResource SquareButtonStyle}" HorizontalAlignment="Left" Width="84" VerticalAlignment="Top"/>
+        <Button x:Name="buttonStart" Content="Start" Margin="368,209,0,0" Click="buttonStart_Click" x:FieldModifier="public" Height="28" Style="{DynamicResource SquareButtonStyle}" HorizontalAlignment="Left" Width="84" VerticalAlignment="Top"/>
 
         <TextBlock x:Name="textPosition" HorizontalAlignment="Left" Margin="262,178,0,0" TextWrapping="Wrap" Text="POSITION" VerticalAlignment="Top" Height="26" FontSize="14.667"/>
-        <ComboBox x:Name="comboBoxPosition" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="332,178,0,0" RenderTransformOrigin="0.5,-0.096">
-            <ComboBoxItem Content="Top Left"/>
-            <ComboBoxItem Content="Top Right"/>
-            <ComboBoxItem Content="Bottom Left"/>
-            <ComboBoxItem Content="Bottom Right"/>
-            <ComboBoxItem Content="Top Center"/>
-            <ComboBoxItem Content="Bottom Center"/>
-            <ComboBoxItem Content="Left Center"/>
-            <ComboBoxItem Content="Right Center"/>
-            <ComboBoxItem Content="Middle"/>
-        </ComboBox>
+        <ComboBox x:Name="comboBoxPosition" HorizontalAlignment="Left" VerticalAlignment="Top"
+				  Width="120" Margin="332,178,0,0"
+				  RenderTransformOrigin="0.5,-0.096" ItemsSource="{Binding CollectionProcesses}" Text="{Binding WindowPosition}" />
 
-        <Rectangle Fill="#434343" Height="41" VerticalAlignment="Top"/>
+            <Rectangle Fill="#434343" Height="41" VerticalAlignment="Top"/>
         <TextBlock x:Name="textDisplay" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="DISPLAY" VerticalAlignment="Top" Height="22" FontSize="14.667" Foreground="White"/>
-        <TextBox x:Name="textBoxWidth" Controls:TextBoxHelper.Watermark="X"  HorizontalAlignment="Left" Height="23" Margin="69,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48" />
-        <TextBox x:Name="textBoxHeight" Controls:TextBoxHelper.Watermark="Y" HorizontalAlignment="Left" Height="23" Margin="117,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
+        <TextBox x:Name="textBoxWidth" Text="{Binding DisplayResolutionX}" Controls:TextBoxHelper.Watermark="X"  HorizontalAlignment="Left" Height="23" Margin="69,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48" />
+        <TextBox x:Name="textBoxHeight" Text="{Binding DisplayResolutionY}" Controls:TextBoxHelper.Watermark="Y" HorizontalAlignment="Left" Height="23" Margin="117,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
         <TextBlock x:Name="textIP" HorizontalAlignment="Left" Margin="180,10,0,0" TextWrapping="Wrap" Text="IP" VerticalAlignment="Top" Height="22" FontSize="14.667" Foreground="White"/>
         <TextBox x:Name="textBoxIP" Controls:TextBoxHelper.Watermark="127.0.0.1" HorizontalAlignment="Left" Height="23" Margin="197,9,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="73"/>
         <TextBlock x:Name="textPort" HorizontalAlignment="Left" Margin="292,10,0,0" TextWrapping="Wrap" Text="PORT" VerticalAlignment="Top" Height="22" FontSize="14.667" Foreground="White"/>
@@ -108,7 +100,7 @@
             </Rectangle>
         </Button>
 
-        <ListBox x:Name="listboxProcesses" HorizontalAlignment="Left" Margin="30,68,0,0" Width="210" IsSynchronizedWithCurrentItem="True" BorderThickness="1" Height="163" VerticalAlignment="Top">
+        <ListBox x:Name="listboxProcesses" HorizontalAlignment="Left" Margin="30,68,0,0" Width="210" IsSynchronizedWithCurrentItem="True" BorderThickness="1" Height="169" VerticalAlignment="Top">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Name}" />
@@ -177,19 +169,22 @@
 
 
 
-            <TextBox x:Name="textBoxPath" Controls:TextBoxHelper.Watermark="C:\Program Files\" HorizontalAlignment="Left" Height="23" Margin="332,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-            <TextBox x:Name="textBoxArgs" HorizontalAlignment="Left" Height="23" Margin="332,116,0,0" TextWrapping="Wrap" Text="args" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="textBoxPath" Controls:TextBoxHelper.Watermark="C:\Program Files\" HorizontalAlignment="Left" Height="23" Margin="332,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Path}"/>
+            <TextBox x:Name="textBoxArgs" Controls:TextBoxHelper.Watermark="-h" HorizontalAlignment="Left" Height="23" Margin="332,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Args}"/>
 
             <TextBlock x:Name="textWindowRes" HorizontalAlignment="Left" Margin="303,147,0,0" TextWrapping="Wrap" Text="RES" VerticalAlignment="Top" Height="26" FontSize="14.667"/>
-            <TextBox x:Name="textBoxWindowX" HorizontalAlignment="Left" Height="23" Margin="332,147,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Width="60"/>
-            <TextBox x:Name="textBoxWindowY" HorizontalAlignment="Left" Height="23" Margin="392,147,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" Width="60"/>
+            <TextBox x:Name="textBoxWindowX" Controls:TextBoxHelper.Watermark="X" HorizontalAlignment="Left" Height="23" Margin="332,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Text="{Binding Width}"/>
+            <TextBox x:Name="textBoxWindowY" Controls:TextBoxHelper.Watermark="Y" HorizontalAlignment="Left" Height="23" Margin="392,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60" Text="{Binding Height}"/>
 
-            <ListBox x:Name="listboxNumbersDummy" HorizontalAlignment="Left" Height="163" Margin="10,68,0,0" VerticalAlignment="Top" Width="20" IsSynchronizedWithCurrentItem="False">
+            <ListBox x:Name="listboxNumbersDummy" HorizontalAlignment="Left" Height="167" Margin="10,68,0,0" VerticalAlignment="Top" Width="20" IsSynchronizedWithCurrentItem="False">
                 <ListBoxItem Content="1" />
                 <ListBoxItem Content="2" />
                 <ListBoxItem Content="3" />
                 <ListBoxItem Content="4" />
             </ListBox>
+            <Button x:Name="buttonStop" Content="stop" Margin="279,209,0,0" x:FieldModifier="public" Height="28" Style="{DynamicResource SquareButtonStyle}" HorizontalAlignment="Left" Width="84" VerticalAlignment="Top" Click="buttonStop_Click"/>
+            <Rectangle Fill="#434343" Height="28" VerticalAlignment="Bottom"/>
+            <TextBlock x:Name="textStatusBar" HorizontalAlignment="Left" Margin="10,0,0,5" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="18" FontSize="14.667" Foreground="White" Width="439"/>
     </Grid>
 
     <Controls:MetroWindow.Resources>
@@ -203,7 +198,7 @@
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
 
-            <Button x:Name="buttonMenuBarNew">
+            <Button x:Name="buttonMenuBarNew" Click="buttonMenuBarNew_Click">
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Width="20" Height="20"
 							   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
@@ -218,7 +213,7 @@
                 </StackPanel>
             </Button>
 
-            <Button x:Name="buttonMenuBarOpen">
+            <Button x:Name="buttonMenuBarOpen" Click="buttonMenuBarOpen_Click">
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Width="20" Height="20"
 							   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
@@ -233,7 +228,7 @@
                 </StackPanel>
             </Button>
 
-            <Button x:Name="buttonMenuBarSave">
+            <Button x:Name="buttonMenuBarSave" Click="buttonMenuBarSave_Click">
                 <StackPanel Orientation="Horizontal">
                     <Rectangle Width="20" Height="20"
 							   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
@@ -245,6 +240,7 @@
                     <TextBlock Margin="4 0 0 0"
 							   VerticalAlignment="Center"
 							   Text="Save" />
+
                 </StackPanel>
             </Button>
 
